# shimoku-api-python

./: .coveragerc  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  task automator
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: publish-testpypi.yml  publish-to-pypi.yml
data/: scatter_test.csv  test_multifilter.csv  test_stack_distribution.csv
docs/: Makefile  conf.py  index.rst
scripts/: user_classes_header_generator.py
src/shimoku/: __init__.py  async_execution_pool.py  exceptions.py  execution_logger.py  nest_asyncio.py  utils.py
src/shimoku/actions/: execute_action.py
src/shimoku/actions_execution/: execute_action.py  front_connection.py
src/shimoku/ai/: ai_layer.py
src/shimoku/ai/generated_headers/: AILayerHeader.py
src/shimoku/api/: base_resource.py  client.py  utils.py
src/shimoku/api/resources/: action.py  action_template.py  activity.py  activity_template.py  app.py  business.py  business_user.py  dashboard.py  data_set.py  event.py  file.py  report.py  role.py  universe.py
src/shimoku/api/user_access_classes/: actions_layer.py  activities_layer.py  activity_templates_layer.py  apps_layer.py  businesses_layer.py  dashboards_layer.py  data_sets_layer.py  files_layer.py  reports_layer.py  universes_layer.py
src/shimoku/cli/: __init__.py  cloud_parser.py  configuration.py  listen.py  main.py  persistence.py  playground.py  utils.py
src/shimoku/cli/cloud/: cascade_get_resources.py  create.py  delete.py  execute.py  get.py  list.py  update.py
src/shimoku/code_gen/: file_generator.py  main_code_gen.py  tree_generation.py  utils_code_gen.py
src/shimoku/code_gen/business_code_gen/: code_gen_from_business.py
src/shimoku/playground/: execute_local_server.py  local_server.py  schema_classes.py  schema_parameter_classses.py  websockets_server.py
src/shimoku/plt/: bentobox_charts.py  plt_layer.py  utils.py
src/shimoku/plt/EChart_definitions/: bar.py  default_echart_options.py  funnel.py  gauge.py  gauge_indicator.py  heatmap.py  line.py  (+11 more)
src/shimoku_api_python/: __init__.py  async_execution_pool.py  base_resource.py  client.py  configuration.py  exceptions.py  execute_local_server.py  execution_logger.py  local_server.py  role_class.py  schema_classes.py  schema_parameter_classses.py  shimoku.py  utils.py  websockets_server.py
src/shimoku_api_python/api/: activity_metadata_api.py  activity_template_metadata_api.py  ai_api.py  app_metadata_api.py  app_type_metadata_api.py  business_metadata_api.py  catalog_api.py  constructor_api.py  dashboard_metadata_api.py  data_managing_api.py  explorer_api.py  file_metadata_api.py  notifications_api.py  path_metadata_api.py  ping_api.py  plot_api.py  plugins_api.py  report_metadata_api.py  suite_api.py  template_api.py  universe_metadata_api.py  workspace_metadata_api.py
src/shimoku_api_python/code_generation/: file_generator.py  main_code_gen.py  tree_generation.py
src/shimoku_api_python/resources/: activity.py  activity_template.py  app.py  business.py  dashboard.py  data_set.py  event.py  file.py  report.py  role.py  universe.py
src/shimoku_api_python/templates/: shimoku_backoffice.py
tests/: Jupyter_notebook_test.ipynb  conftest.py  test_activity_metadata_api.py  test_ai_api.py  test_api_client.py  test_app_metadata_api.py  test_apptype_api.py  test_business_admin.py  test_business_metadata_api.py  test_components_catalog.py  test_dashboard_metadata_api.py  test_data_managing_api.py  test_explorer_api.py  test_file_metadata_api.py  test_multi_create_api.py  test_path_metadata_api.py  test_plot_api.py  test_real_time.py  test_report_metadata_api.py  test_roles.py  test_skeleton.py  test_suite_api.py  test_template_api.py  test_universe_metadata_api.py
tests/mockable_tests/: mock_classes.py  test_actions.py  test_activity_metadata_api.py  test_app_metadata_api.py  test_business_metadata_api.py  test_code_generation.py  test_dashboard_metadata_api.py  test_data_managing_api.py  test_plot_api.py  test_report_metadata_api.py  test_roles.py  utils.py
tests/mockable_tests/correct_action_scripts/: correct_action.py
tests/mockable_tests/error_action_scripts/: action_cant_have_no_params.py  action_param_must_be_Client.py  action_param_must_be_annotated.py  action_param_must_be_shimoku_client.py  cant_annotate_client_param_to_arb_name.py  cant_assign_client.py  cant_assign_client_in_class.py  cant_assign_client_to_subscript.py  cant_assign_to_shimoku_client.py  cant_define_action_in_class.py  cant_define_async_functions.py  cant_define_more_than_one_action.py  cant_have_arb_params_in_action.py  cant_have_client_as_part_of_annotation.py  cant_have_non_annotated_param.py  cant_import_asyncio.py  cant_import_from_asyncio.py  cant_pass_incorrect_type_to_function.py  cant_pass_incorrect_type_to_kwargs.py  cant_rename_client.py  cant_return_shimoku_client.py  needs_action_function.py  needs_import_client.py  shimoku_client_param_must_be_client.py
tests/mockable_tests/test_plot_api_functions/: annotation_chart.py  area.py  bar.py  bar_and_line_chart.py  bentobox.py  chart_and_indicators.py  doughnut.py  dynamic_conditional_and_auto_send_input_form.py  free_echarts.py  free_echarts_raw.py  funnel.py  gauge_indicator.py  get_input_forms.py  heatmap.py  horizontal_bar.py  html.py  iframe.py  indicator.py  indicator_color_by_value.py  infographics.py  input_form.py  line.py  line_with_confidence_area.py  marked_line.py  modal.py  pie.py  predictive_line.py  radar.py  rainfall_area.py  rainfall_line.py  rose.py  sankey.py  scatter.py  scatter_with_effect.py  segmented_area_chart.py  segmented_line_chart.py  shimoku_gauges.py  speed_gauge.py  stacked_area.py  stacked_bar.py  (+11 more)
tests/unit_tests/: mock_classes.py  test_actions.py  test_activity_metadata_api.py  test_app_metadata_api.py  test_business_metadata_api.py  test_code_generation.py  test_dashboard_metadata_api.py  test_plot_api.py  test_report_metadata_api.py  test_roles.py  utils.py
(+122 files in other folders)
